--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\i18n.Helper\packages.config" />
   <repository path="..\JsonToCsv.UnitTests\packages.config" />
   <repository path="..\JsonToCsv\packages.config" />
 </repositories>
