--- a/JsonToCsv.UnitTests/packages.config
+++ b/JsonToCsv.UnitTests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.16.5" targetFramework="net45" />
+  <package id="AutoFixture.AutoMoq" version="3.16.5" targetFramework="net45" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net45" />
+  <package id="Moq" version="4.2.1312.1622" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
 </packages>
