--- a/JsonToCsv/App.config
+++ b/JsonToCsv/App.config
@@ -1,6 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
+  </configSections>
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <!-- INTERFACES -->
+    <alias alias="IBingHandler" type="i18n.Helper.BingTranslate.IBingHandler, i18n.Helper.BingTranslate" />
+    <alias alias="ILocalizationHandler" type="i18n.Helper.Contracts.ILocalizationHandler, i18n.Helper.Contracts" />
+    
+    <alias alias="BingHandler" type="i18n.Helper.BingTranslate.BingHandler, i18n.Helper.BingTranslate" />
+    <alias alias="LocalizationHandler" type="i18n.Helper.ILocalizationHandler, i18n.Helper" />
+
+    <container>
+      <register type="IBingHandler" mapTo="BingHandler" />
+      <register type="ILocalizationHandler" mapTo="LocalizationHandler" />
+    </container>
+
+  </unity>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
