--- a/i18n.Helper.BingTranslate/i18n.Helper.BingTranslate.csproj
+++ b/i18n.Helper.BingTranslate/i18n.Helper.BingTranslate.csproj
@@ -41,8 +41,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BingHandler.cs" />
+    <Compile Include="IBingHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranslatorContainer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\i18n.Helper.Contracts\i18n.Helper.Contracts.csproj">
+      <Project>{3b019c1c-293b-4178-a5f5-4340ab6dc79d}</Project>
+      <Name>i18n.Helper.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
