Setup Dependency Injection

--- a/JsonToCsv/App.config
+++ b/JsonToCsv/App.config
@@ -6,14 +6,27 @@
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <!-- INTERFACES -->
     <alias alias="IBingHandler" type="i18n.Helper.BingTranslate.IBingHandler, i18n.Helper.BingTranslate" />
-    <alias alias="ILocalizationHandler" type="i18n.Helper.Contracts.ILocalizationHandler, i18n.Helper.Contracts" />
+    <alias alias="ITranslateHandler" type="i18n.Helper.Contracts.ITranslateHandler, i18n.Helper.Contracts" />
     
+    <alias alias="ILocalizationHandler" type="i18n.Helper.Contracts.ILocalizationHandler, i18n.Helper.Contracts" />
+    <alias alias="Ii18nHandler" type="i18n.Helper.Contracts.Ii18nHandler, i18n.Helper.Contracts" />
+    <alias alias="IFileHandler" type="i18n.Helper.Contracts.IFileHandler, i18n.Helper.Contracts" />
+    <alias alias="Ii18nJsonParser" type="i18n.Helper.Contracts.Ii18nJsonParser, i18n.Helper.Contracts" />
+    
+
     <alias alias="BingHandler" type="i18n.Helper.BingTranslate.BingHandler, i18n.Helper.BingTranslate" />
-    <alias alias="LocalizationHandler" type="i18n.Helper.ILocalizationHandler, i18n.Helper" />
+    <alias alias="LocalizationHandler" type="i18n.Helper.LocalizationHandler, i18n.Helper" />
+    <alias alias="FileHandler" type="i18n.Helper.FileHandler, i18n.Helper" />
+    <alias alias="i18nHandler" type="i18n.Helper.i18nHandler, i18n.Helper" />
+    <alias alias="i18nJsonParser" type="i18n.Helper.i18nJsonParser, i18n.Helper" />
 
     <container>
       <register type="IBingHandler" mapTo="BingHandler" />
       <register type="ILocalizationHandler" mapTo="LocalizationHandler" />
+      <register type="Ii18nHandler" mapTo="i18nHandler" />
+      <register type="IFileHandler" mapTo="FileHandler" />
+      <register type="Ii18nJsonParser" mapTo="i18nJsonParser" />
+      <register type="ITranslateHandler" mapTo="BingHandler" />
     </container>
 
   </unity>
