--- a/JsonToCsv/i18n.LocaleTool.csproj
+++ b/JsonToCsv/i18n.LocaleTool.csproj
@@ -71,6 +71,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\i18n.Helper.BingTranslate\i18n.Helper.BingTranslate.csproj">
+      <Project>{d6a7337f-4cd2-45a1-b04c-324739076ac5}</Project>
+      <Name>i18n.Helper.BingTranslate</Name>
+    </ProjectReference>
     <ProjectReference Include="..\i18n.Helper.Contracts\i18n.Helper.Contracts.csproj">
       <Project>{3B019C1C-293B-4178-A5F5-4340AB6DC79D}</Project>
       <Name>i18n.Helper.Contracts</Name>
