Restricting interface usage

--- a/JsonToCsv/App.config
+++ b/JsonToCsv/App.config
@@ -21,9 +21,7 @@
     <alias alias="i18nJsonParser" type="i18n.Helper.i18nJsonParser, i18n.Helper" />
 
     <container>
-      <register type="IBingHandler" mapTo="BingHandler" />
-      <register type="ILocalizationHandler" mapTo="LocalizationHandler" />
-      <register type="Ii18nHandler" mapTo="i18nHandler" />
+      <register type="ILocalizationHandler" mapTo="i18nHandler" />
       <register type="IFileHandler" mapTo="FileHandler" />
       <register type="Ii18nJsonParser" mapTo="i18nJsonParser" />
       <register type="ITranslateHandler" mapTo="BingHandler" />
